# MathH

./: .gitignore  CMakeLists.txt  Makefile
docs/: Doxyfile
docs/html/: MathH_8cpp.html  MathH_8cpp__incl.map  MathH_8cpp__incl.md5  MathH_8cpp_source.html  MathH_8h.html  MathH_8h__dep__incl.map  MathH_8h__dep__incl.md5  MathH_8h__incl.map  MathH_8h__incl.md5  MathH_8h_source.html  annotated.html  classMathH_1_1MathHClass-members.html  classMathH_1_1MathHClass.html  classMathH_1_1Matrix-members.html  classMathH_1_1Matrix.html  classes.html  dir_000002_000000.html  dir_62f82f13f63c5bbc403116b9d0215303.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  globals.html  globals_type.html  graph_legend.html  index.html  menudata.js  namespaceMathH.html  namespaces.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  namespaces_0.js  searchdata.js  typedefs_0.js
docs/latex/: MathH_8cpp.tex  MathH_8cpp__incl.md5  MathH_8h.tex  MathH_8h__dep__incl.md5  MathH_8h__incl.md5  annotated.tex  classMathH_1_1MathHClass.tex  classMathH_1_1Matrix.tex  dir_62f82f13f63c5bbc403116b9d0215303.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  namespaceMathH.tex  namespaces.tex  refman.tex
include/MathH/: MathH.h
src/: MathH.cpp
